--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,8 +7,8 @@
   <title>Mybrary</title>
 </head>
 <body>
-  <div>Before</div>
-    <%- body %>
-  <div>After</div>
+  <%- include('../partials/header.ejs') %>
+  <%- include('../partials/errorMessage.ejs') %>
+  <%- body %>
 </body>
 </html>
