Books Create/Index/New

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,8 @@
-Middle
+<h2>Recently Added</h2>
+<div>
+  <% books.forEach(book => { %>
+    <h2><%= book.title %></h2>
+    <p><%= book.publishDate %></p>
+    <img height="150" width="100" src="<%= book.coverImagePath %>">
+  <% }) %>
+</div>
