Finished Author Routes

--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,4 +1,2 @@
-<label for="name">
-  Name
-  <input type="text" name="name" value="<%= author.name %>">
-</label>
+<label>Name</label>
+<input type="text" name="name" value="<%= author.name %>">
