--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <div>
   <% books.forEach(book => { %>
     <h2><%= book.title %></h2>
+    <p><%= book.author %></p>
     <p><%= book.publishDate %></p>
     <img height="150" width="100" src="<%= book.coverImagePath %>">
   <% }) %>
