--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,9 @@
 <div>
   <% books.forEach(book => { %>
     <h2><%= book.title %></h2>
-    <p><%= book.author %></p>
     <p><%= book.publishDate %></p>
-    <img height="150" width="100" src="<%= book.coverImagePath %>">
+    <a href="/books/<%= book.id %>">
+      <img height="150" width="100" src="<%= book.coverImagePath %>">
+    </a>
   <% }) %>
 </div>
